--- a/YelpCamp/package.json
+++ b/YelpCamp/package.json
@@ -15,8 +15,12 @@
     "ejs-mate": "^4.0.0",
     "express": "^4.18.1",
     "express-session": "^1.17.3",
+    "install": "^0.13.0",
     "joi": "^17.6.0",
     "method-override": "^3.0.0",
-    "mongoose": "^6.3.2"
+    "mongoose": "^6.3.2",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^7.1.2"
   }
 }
