--- a/YelpCamp/package.json
+++ b/YelpCamp/package.json
@@ -17,6 +17,7 @@
     "ejs": "^3.1.7",
     "ejs-mate": "^4.0.0",
     "express": "^4.18.1",
+    "express-mongo-sanitize": "^2.2.0",
     "express-session": "^1.17.3",
     "install": "^0.13.0",
     "joi": "^17.6.0",
